<resources>
    <string name="app_name" translatable="false">SportApp - Grupo 1</string>
    <string name="bienvenido">Bienvenid@</string>
    <string name="username">Nombre de Usuario</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="password">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="password_recovery">Recuperar Contraseña</string>
    <string name="text_validation_error_time_format">El tiempo tiene que estar en formato XX:YY:ZZ</string>
    <string name="text_validation_error_time_letters">El tiempo solo debe contener numeros</string>
    <string name="text_validation_error_min_pass_length">La contraseña debe tener al menos 8 caracteres</string>
    <string name="text_validation_error_min_calories">Las calorias objetivo deben ser al menos 500</string>
    <string name="text_validation_error_blank_space">La contraseña no debe tener espacios en blanco</string>
    <string name="text_validation_error_uppercase">La contraseña necesita al menos una mayuscula</string>
    <string name="text_validation_error_lowercase">La contraseña necesita al menos una minuscula</string>
    <string name="text_validation_error_special_char">La contraseña necesita al menos un simbolo especial</string>
    <string name="text_validation_error_max_pass_length">La contraseña debe tener maximo 64 caracteres</string>
    <string name="text_validation_date_format">La  fecha debe ser en formato AAAA-MM-DD</string>
    <string name="text_validation_date_blank_space">La Fecha no debe tener espacios en blanco</string>
    <string name="text_validation_date_month">El mes debe ser un valor entre 01 y 12</string>
    <string name="text_validation_date_day">El dia debe ser un valor entre 01 y 31</string>
    <string name="text_validation_success">Todo bien</string>
    <string name="text_validation_error_empty_field">El campo no debe estar vacio</string>
    <string name="text_validation_error_email">El usuario debe ser un correo valido</string>
    <string name="crear_plan_de_entrenamiento">Crear Plan de Entrenamiento</string>
    <string name="lunes">Lunes</string>
    <string name="crear_nuevo_plan">Crear nuevo Plan</string>
    <string name="numero_de_semanas">Numero de Semanas</string>
    <string name="domingo">Domingo</string>
    <string name="sabado">Sabado</string>
    <string name="viernes">Viernes</string>
    <string name="jueves">Jueves</string>
    <string name="miercoles">Miercoles</string>
    <string name="martes">Martes</string>
    <string name="cancelar">Cancelar</string>
    <string name="sufix_entrenamiento" translatable="false">\u0020 km</string>
    <string name="crear_plan_de_alimentacion">Crear Plan de Alimentacion</string>
    <string name="sufix_alimentacion" translatable="false">\u0020 kcal</string>
    <string name="actividad">Actividad</string>
    <string name="actividad_title">Actividad:</string>
    <string name="alimentacion_del_dia">Alimentacion del Dia</string>
    <string name="comida_1">Comida 1</string>
    <string name="comida_2">Comida 2</string>
    <string name="comida_3">Comida 3</string>
    <string name="agua">Agua</string>
    <string name="registrar_alimentacion">Registrar Alimentacion</string>
    <string name="meta">Meta</string>
    <string name="distancia">Distancia</string>
    <string name="ingresar_resultado">Ingresar Resultado</string>
    <string name="monitoreo">Monitoreo</string>
    <string name="entrenamiento_del_dia">Entrenamiento del Dia</string>
    <string name="tiempo">Tiempo</string>
    <string name="registrar_entrenamiento">Registrar Entrenamiento</string>
    <string name="detalle_de_plan_de_entrenamiento">Detalle de Plan de Entrenamiento</string>
    <string name="detalle_de_plan_de_alimentacion">Detalle de Plan de Alimentacion</string>
    <string name="resultados_de_alimentacion">Resultados de Alimentacion</string>
    <string name="registrar_nuevo_resultado">Registrar nuevo Resultado</string>
    <string name="calorias_totales">Calorias Totales:</string>
    <string name="ml_de_agua">Cantidad de Agua:</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_label">Fecha:</string>
    <string name="listado_de_resultados_de_entrenamiento">Listado de Resultados de Entrenamiento</string>
    <string name="resultados_de_entrenamiento">Resultados de Entrenamiento</string>
    <string name="tiempo_title">Tiempo:</string>
    <string name="distancia_title">Distancia:</string>
    <string name="sin_datos">Sin Datos</string>
    <string name="entrenamiento_de_hoy">Entrenamiento de Hoy</string>
    <string name="alimentacion_de_hoy">Alimentacion de Hoy</string>
    <string name="registrar">Registrar</string>
    <string name="plan_de_entrenamiento">Plan de Entrenamiento</string>
    <string name="ver_mas">Ver mas</string>
    <string name="plan_de_alimentacion">Plan de Alimentacion</string>
    <string name="eventos_cerca_de_ti">Eventos Cerca de Ti</string>
    <string name="perfil_de_usuario">Perfil de Usuario</string>
    <string-array name="Deportes">
        <item>Atletismo</item>
        <item>Ciclismo</item>
    </string-array>
    <string-array name="Retroalimentacion">
        <item>Excelente</item>
        <item>Muy Bien</item>
        <item>Bien</item>
        <item>Regular</item>
        <item>Mal</item>
        <item>Muy Mal</item>
        <item>Pesimo</item>
    </string-array>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="peso">Peso</string>
    <string name="correo">Correo</string>
    <string name="sexo">Sexo</string>
    <string name="ciudad">Ciudad</string>
    <string name="altura">Altura</string>
    <string name="editar_informacion_de_perfil">Editar Informacion de Perfil</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="mejorar_plan">Mejorar Plan</string>
    <string name="cerrar_session">Cerrar Sesion</string>
    <string name="pais">Pais</string>
    <string name="plan">Plan</string>
    <string name="empezar">Empezar</string>
    <string name="monitoreo_de_actividad">Monitoreo de Actividad</string>
    <string name="alerta">Alerta</string>
    <string name="terminar">Terminar</string>
    <string name="alerta_enviada">Alerta enviada</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="informacion_sumistrada">Informacion Sumistrada</string>
    <string name="regresar">Regresar</string>
    <string name="reintentar">Reintentar</string>
    <string name="listado_de_sugerencias">Listado de Sugerencias</string>
    <string name="nombre_title">Nombre:</string>
    <string name="costo">Costo:</string>
    <string name="lugar">Lugar:</string>
    <string name="detalle_de_evento">Detalle del Evento</string>
    <string name="hora">Hora:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="tus_proximos_eventos">Tus proximos eventos</string>
    <string name="aqui_podras_ver_tus_eventos_registrados">Aqui podras ver tus eventos registrados</string>
    <string name="plan_premium_anual">Esta funcionalidad solo esta disponible para planes Premium de pago anual</string>
    <string name="plan_intermedio">La funcionalidad de Monitoreo solo esta disponible para planes Intermedios de pago mensual</string>
    <string name="aqui_podras_ver_eventos_cerca_de_ti">Aqui podras ver eventos cerca de ti</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="Vacio">Sin Datos</string>
    <string name="quedan">Quedan \u0020</string>
    <string name="hola">Hola \u0020</string>
    <string name="semanas">\u0020 semanas</string>
    <string name="logo_de_aplicacion">Logo de Aplicacion</string>
    <string name="reintentar_text">Reintente por favor</string>
    <string name="ftp" translatable="false">FTP:</string>
    <string name="VO2MAX" translatable="false">Vo2Max:</string>
    <string name="no_eventos">Por el momento no hay eventos nuevos en su zona</string>
    <string name="not_part_mvp">No forma parte del MVP</string>
    <string name="exito">Operacion Exitosa.</string>
    <string name="failed_Error">Operacion Fallida. Error: \u0020</string>
    <string name="user_no_data">Usuario no tiene datos cargados aun</string>
    <string name="todos_los_campos">Todos los campos deben ser diligenciados, por favor corrija e intente de nuevo</string>
    <string name="register_error">Registro solo disponible en plataforma Web</string>
    <string name="user_client_only">Usuario es proveedor, porfavor usar Plataforma Web</string>
    <string name="location_services">Por favor encender servicios de ubicacion</string>
    <string name="no_new_events">No hay eventos nuevos</string>
    <string name="menu">Menu</string>
    <string name="ver_mis_eventos">Ver mis eventos</string>
    <string name="detalle_del_plan">Detalles del plan</string>
    <string name="ver_sugerencias">Ver sugerencias</string>
</resources>