<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EntrenamientoMenu">

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/lightGrey"
        android:layout_height="wrap_content"
        android:layout_above="@id/goal"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginBottom="20dip"
        android:text="@string/distancia" />

    <TextView
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/monitoreoBtn"
        android:gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/lightGrey"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/monitoreoBtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="18dp"
        android:layout_above="@id/entre_result_btn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/ButtonGrey"
        android:visibility="visible"
        android:text="@string/monitoreo"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/not_premium_text"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="18dp"
        android:textColor="@color/lightGrey"
        android:text="@string/plan_intermedio"
        android:gravity="center"
        android:visibility="invisible"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_above="@id/entre_result_btn"
        />

    <Button
        android:id="@+id/entre_result_btn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/ingresar_resultado"
        android:layout_centerInParent="true"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/ButtonGrey"
        android:textAllCaps="false"
        android:textSize="20sp"  />

    <Button
        android:id="@+id/result_list_btn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/listado_de_resultados_de_entrenamiento"
        android:layout_below="@id/entre_result_btn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/ButtonGrey"
        android:textAllCaps="false"
        android:textSize="20sp"  />

</RelativeLayout>