<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Alerta_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/lightGrey"
        android:layout_height="wrap_content"
        android:layout_above="@id/subtitle"
        android:layout_centerHorizontal="true"
        android:textSize="45sp"
        android:layout_marginBottom="30dip"
        android:textStyle="bold"
        android:text="@string/alerta_enviada" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/latitud"
        android:gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/lightGrey"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/informacion_sumistrada"
        android:textSize="30sp"/>

    <LinearLayout
        android:id="@+id/latitud"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_above="@id/longitud"
        android:layout_marginTop="10dip"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/lightGrey"
            android:text="@string/latitud" />

        <TextView
            android:id="@+id/latitud_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="@color/lightGrey"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/longitud"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dip"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/lightGrey"
            android:text="@string/longitud" />

        <TextView
            android:id="@+id/longitud_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="@color/lightGrey"/>
    </LinearLayout>

    <Button
        android:id="@+id/regresarBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/longitud"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/ButtonBlue"
        android:text="@string/regresar"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/reintentarBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/regresarBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/duskYellow"
        android:text="@string/reintentar"
        android:textAllCaps="false"
        android:textSize="20sp" />



</RelativeLayout>