<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlimentacionResultCreate">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/lightGrey"
        android:layout_marginEnd="10dp"
        android:text="@string/alimentacion_del_dia"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/lightGrey"
        android:layout_marginEnd="10dp"
        android:text="@string/meta"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goal_title"
        android:gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/lightGrey"
        android:layout_marginEnd="10dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comida1"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/lightGrey"
        android:backgroundTint="@color/lightGrey"
        app:suffixText="@string/sufix_alimentacion"
        app:suffixTextColor="@color/lightGrey"
        android:hint="@string/comida_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comida1_text"
            android:layout_width="match_parent"
            android:textColor="@color/lightGrey"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comida2"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comida1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:suffixText="@string/sufix_alimentacion"
        app:suffixTextColor="@color/lightGrey"
        android:textColorHint="@color/lightGrey"
        android:hint="@string/comida_2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comida2_text"
            android:layout_width="match_parent"
            android:textColor="@color/lightGrey"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comida3"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comida2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/lightGrey"
        app:suffixText="@string/sufix_alimentacion"
        app:suffixTextColor="@color/lightGrey"
        android:hint="@string/comida_3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comida3_text"
            android:layout_width="match_parent"
            android:textColor="@color/lightGrey"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/agua"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comida3"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/lightGrey"
        app:suffixText="ml"
        app:suffixTextColor="@color/lightGrey"
        android:hint="@string/agua">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agua_text"
            android:layout_width="match_parent"
            android:textColor="@color/lightGrey"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/agua"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/registrar_alimentacion"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrar"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/cancelar"
        android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>